--- a/Task7/styles.css
+++ b/Task7/styles.css
@@ -110,18 +110,11 @@ body {
 
 .class-footer .more-details {
   text-decoration: none;
-  color: #3498db;
+  color: #777;
   display: flex;
   align-items: center;
 }
 
 .class-footer .more-details i {
   margin-left: 5px;
-}
-
-@media (max-width: 768px) {
-  .class-list {
-    flex-direction: column;
-    align-items: center;
-  }
 }
