--- a/Task9/styles.css
+++ b/Task9/styles.css
@@ -47,7 +47,7 @@ body {
   top: 10px; /* adjust the position as needed */
   left: 20px; /* adjust the position as needed */
   font-size: 18px;
-  color: #red;
+  color: red;
 }
 .more-details {
   color: #333;
